force-app/main/default/objects/AFSC__FSLink__c/AFSC__FSLink__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: Storage for original links</description>
    <label>Link</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>