force-app/main/default/objects/AFSC__FSLink__c/fields/AFSC__Domain__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Domain__c</fullName>
    <label>Domain</label>
    <type>Url</type>
</CustomField>