force-app/main/default/objects/AFSC__FSLink__c/fields/AFSC__Host__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Host__c</fullName>
    <label>Host</label>
    <type>Url</type>
</CustomField>