force-app/main/default/objects/AFSC__FSLink__c/fields/AFSC__SHA1__c.field-meta.xml
<CustomField>
    <fullName>AFSC__SHA1__c</fullName>
    <description>DEPRECATED</description>
    <label>DEPRECATED SHA1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>