force-app/main/default/objects/AFSC__FSLink__c/fields/AFSC__SHA__c.field-meta.xml
<CustomField>
    <fullName>AFSC__SHA__c</fullName>
    <description>This is the SHA1 formed from the URL, used for identification purposes.</description>
    <externalId>true</externalId>
    <label>SHA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>