force-app/main/default/objects/AFSC__FSLink__c/fields/AFSC__URL__c.field-meta.xml
<CustomField>
    <fullName>AFSC__URL__c</fullName>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>